--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,28 +1,49 @@
 @import "reset.css";
 @import "breakpoints.css";
 
+
+.noselect, .x, .popup-reset, .backdrop{
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+              -webkit-user-drag: none;
+              -khtml-user-drag: none;
+              -moz-user-drag: none;
+              -o-user-drag: none;
+              user-drag: none;
+              overflow: hidden;
+  }
+
+
+
 * {
     box-sizing: border-box;
 }
 .app-container {
-    padding: 3.5rem;
     display: block;
     width: 100%;
 }
 .module {
-    width: 100%;
+    max-width: 100vw;;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
     flex-direction: column
 }
+.app-img{
+    max-width: 100vw;
+    height: auto;
+}
 .paragraph-box {
     margin-left: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 .paragraph-title {
     margin-top: 20px;
@@ -30,20 +51,29 @@
     font-weight: 700;
     font-size: 42px;
     color: #121212;
+
+}
+.paragraph-paragraph {
+    width: 90vw;
+    padding: 1rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 150%;
 }
 .app-btn {
     all: unset;
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     padding: 16px 40px;
-    gap: 10px;
     color: #ffffff;
     background: #e4c1ae;
     border-radius: 32px;
     cursor: pointer;
-    margin-bottom: 50px;
-
     align-self: center;
 }
 .app-btn:hover {
@@ -53,16 +83,6 @@
     content: "Button";
     font-family: "Roboto", sans-serif;
 }
-.paragraph-paragraph {
-    max-width: 70vw;;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 150%;
-}
 .module {
     margin-top: 2.5rem;
     width: 100%;
@@ -71,31 +91,38 @@
     align-content: center;
     align-items: center;
 }
+.backdrop {
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+.popup {
+    display: flex;
+    box-sizing: border-box;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    width: 90vw;
+    max-width: 900px;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    position: fixed;
+    z-index: 10;
+    top:30vh;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1.5rem;
+}
 .popup-title {
     font-family: "Roboto", sans-serif;
     margin-bottom: 2rem;
     font-size: 42px;
     font-weight: 700;
-}
-.popup {
-    font-family: "Roboto", sans-serif;
-    display: flex;
-    box-sizing: border-box;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-    background-color: white;
-    text-align: center;
-    width: 80vw;
-    z-index: 10;
-    position: absolute;
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-    top: 20vh;
-    left: 50%;
-    transform: translateX(-50%);
-    flex-direction: column;
-    align-items: flex-start;
 }
 .popup-reset {
     cursor: pointer;
@@ -103,21 +130,21 @@
     position: absolute;
     padding: 10px;
     cursor: pointer;
-    top:20px;
-    right: 40px;
+    top: 20px;
+    right: 60px;
     background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M12 0c-3.31 0-6.291 1.353-8.459 3.522l-2.48-2.48-1.061 7.341 7.437-.966-2.489-2.488c1.808-1.808 4.299-2.929 7.052-2.929 5.514 0 10 4.486 10 10s-4.486 10-10 10c-3.872 0-7.229-2.216-8.89-5.443l-1.717 1.046c2.012 3.803 6.005 6.397 10.607 6.397 6.627 0 12-5.373 12-12s-5.373-12-12-12z'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 12px 12px;
 }
-.x {
+.popup-close { /*popup close*/
     position: absolute;
     padding: 10px;
     cursor: pointer;
-    top:20px;
+    top: 20px;
     right: 20px;
 }
-.x:before {
+.popup-close:before {
     content: "";
     position: absolute;
     display: block;
@@ -132,7 +159,7 @@
     transform: rotate(45deg);
     transform-origin: center;
 }
-.x:after {
+.popup-close:after {
     content: "";
     position: absolute;
     display: block;
@@ -147,14 +174,6 @@
     transform: rotate(-45deg);
     transform-origin: center;
 }
-.backdrop {
-    position: fixed;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.75);
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-}
+
 
 @import "breakpoints.css";
